--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .App-header {
-  background-color: #282c34;
+  background-color: #282C34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -11,7 +11,15 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
 .App-link {
-  color: #61dafb;
+  color: #61DAFB;
 }
+/* .pokeImg {
+  filter: brightness(0%);
+} */
+/* .pokeImgShow {
+  filter: brightness(100%);
+} */
+/* .pokeName{
+  display: none;
+} */
